# study_auction

./: Dockerfile  pyproject.toml  run.py
act/: admin.py  app.py  models.py
act/api/: api.py
act/api/schemas/: __init__.py  api.py
act/migrations/: 0001_initial.py  0002_alter_customerlot_owner_customer_and_more.py  0003_virtualaccount_balance.py
auction/: settings.py
