[tool.poetry]
name = "auction"
version = "0.1.0"
description = ""
authors = ["pokotylo <pokotilo_a@tochka.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=4.0.6"
aiojobs = "^1.0.0"
anyio = "^3.6.1"
asgiref = "^3.5.2"
async-timeout = "^4.0.2"
CacheControl = "^0.12.11"
cachy = ">=0.3.0"
certifi = ">=2022.6.15"
charset-normalizer = ">=2.1.0"
cleo = ">=0.8.1"
click = ">=8.1.3"
clikit = ">=0.6.2"
crashtest = ">=0.3.1"
distlib = ">=0.3.4"
django-fsm = ">=2.8.0"
fastapi = ">=0.68.2"
fastapi-jsonrpc = ">=2.2.0"
filelock = ">=3.7.1"
h11 = ">=0.13.0"
html5lib = ">=1.1"
idna = ">=3.3"
keyring = ">=23.6.0"
lockfile = ">=0.12.2"
msgpack = ">=1.0.4"
packaging = ">=20.9"
pastel = ">=0.2.1"
pexpect = ">=4.8.0"
Pillow = ">=9.1.1"
pip = ">=21.2.3"
pkginfo = ">=1.8.3"
platformdirs = ">=2.5.2"
poetry = ">=1.1.14"
poetry-core = ">=1.0.8"
psycopg2-binary = ">=2.9.3"
ptyprocess = ">=0.7.0"
pydantic = ">=1.9.1"
pylev = ">=1.4.0"
pyparsing = ">=3.0.9"
requests = ">=2.28.1"
requests-toolbelt = ">=0.9.1"
setuptools = ">=57.4.0"
shellingham = ">=1.4.0"
simplejson = ">=3.17.6"
six = ">=1.16.0"
sniffio = ">=1.2.0"
sqlparse = ">=0.4.2"
starlette = "0.14.2"
tomlkit = ">=0.11.1"
typing-extensions = ">=4.2.0"
urllib3 = ">=1.26.10"
uvicorn = ">=0.18.2"
uvloop = ">=0.16.0"
virtualenv = ">=20.15.1"
webencodings = ">=0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
